@@ -30,6 +30,7 @@ class RemoteController(eva.item.Item):
             self.api.set_timeout(eva.core.timeout)
             self._key = None
         self.product_build = None
+        self.controller_type = None
         self.version = None
         self.pool = None
         self.mqtt_update = mqtt_update
@@ -63,8 +64,7 @@ class RemoteController(eva.item.Item):
             return False
         self.item_id = result['system']
         self.config_changed = True
-        self.group = result['product_code']
-        self.full_id = self.group + '/' + self.item_id
+        self.set_group(result['product_code'])
         self.product_build = result['product_build']
         logging.info('controller %s loaded' % self.item_id)
         self.version = result['version']
@@ -184,6 +184,7 @@ class RemoteUC(RemoteController):
 
     def __init__(self, uc_id=None, api=None, mqtt_update=None):
         super().__init__(uc_id, 'remote_uc', api, mqtt_update)
+        self.controller_type = 'uc'
         self.api.set_product('uc')
 
     def create_remote_unit(self, state):
@@ -221,6 +222,7 @@ class RemoteLM(RemoteController):
 
     def __init__(self, lm_id=None, api=None, mqtt_update=None):
         super().__init__(lm_id, 'remote_lm', api, mqtt_update)
+        self.controller_type = 'lm'
         self.api.set_product('lm')
 
     def create_remote_lvar(self, state):
